--- a/mobile-reordering/index.html
+++ b/mobile-reordering/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>FlexBox Nav</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style-ANSWER.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -30,10 +30,10 @@
           <a href=""><i class="fa fa-facebook"></i></a>
         </li>
         <li class="social">
-          <a href="http://github.com/jrubendiaz"><i class="fa fa-github"></i></a>
+          <a href=""><i class="fa fa-github"></i></a>
         </li>
         <li class="social">
-          <a href="http://instagram.com/jrubendiaz"><i class="fa fa-instagram"></i></a>
+          <a href=""><i class="fa fa-instagram"></i></a>
         </li>
       </ul>
     </nav>
