--- a/flex-mix-centering/index.html
+++ b/flex-mix-centering/index.html
@@ -22,19 +22,19 @@
         </li>
 
         <li>
-          <a href="#">Add a CLI to Node Apps with Vantage</a>
+          <a href="#">Aprendiendo a maquetar</a>
         </li>
 
         <li>
-          <a href="#">NewSprint, Spectacle</a>
+          <a href="#">Elementos y selectores</a>
         </li>
 
         <li>
-          <a href="#">Small Modules: Tales from a Serial Module Author</a>
+          <a href="#">Cómo plantear un maquetado</a>
         </li>
 
         <li>
-          <a href="#">The End</a>
+          <a href="#">Maquetar con flexbox</a>
         </li>
 
         <li class="arrow">
